example/kubernetes-manifests/atlantis-statefulset/atlantis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: atlantis
      containers:
      - $setElementOrder/env:
        - name: ATLANTIS_REPO_ALLOWLIST
        - name: ATLANTIS_GH_APP_ID
        - name: ATLANTIS_GH_APP_KEY_FILE
        - name: ATLANTIS_GH_WEBHOOK_SECRET
        - name: ATLANTIS_WRITE_GIT_CREDS
        - name: ATLANTIS_DATA_DIR
        - name: ATLANTIS_PORT
        - name: ATLANTIS_ATLANTIS_URL
        - name: ATLANTIS_REPO_CONFIG_JSON
        image: runatlantis/atlantis:v0.15.0 # Update me
        name: atlantis
