example/kubernetes-manifests/atlantis-statefulset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: atlantis-external-facing-ip
  name: atlantis-ingress
  namespace: default
spec:
  rules:
  - host: atlantis-test.example.com # Update me
    http:
      paths:
      - backend:
          service:
            name: atlantis
            port:
              number: 80
        pathType: ImplementationSpecific
